#45-114 Adds generateID API method
